--- a/index.ipynb
+++ b/index.ipynb
@@ -58,15 +58,15 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    return x*\n",
-    "    pass\n",
-    "\n",
-    "def three_x_y_at_three(x):\n",
     "    return x*3\n",
     "    pass\n",
     "\n",
+    "def three_x_y_at_three(x):\n",
+    "    return x*3*3\n",
+    "    pass\n",
+    "\n",
     "def three_x_y_at_six(x):\n",
-    "    return x*6\n",
+    "    return x*6*3\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
