Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
     "    pass\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return list(map(lambda x: three_x_y_at_(x), x_values))\n",
+    "    return list(map(lambda x: three_x_y_at_nine(x), x_values))\n",
     "    pass"
    ]
   },
