--- a/index.ipynb
+++ b/index.ipynb
@@ -2447,7 +2447,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    \n",
+    "    retu\n",
     "    pass"
    ]
   },
