Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2447,7 +2447,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    return list(map(lambda term: term[0]*term[1]*term ))\n",
+    "    return list(map(lambda term: term[0]*term[1]*term[2] ))\n",
     "    pass"
    ]
   },
