--- a/index.ipynb
+++ b/index.ipynb
@@ -2442,28 +2442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    der =  list(map(lambda term: term[0]*x_value**term[1]*term[2],list_of_terms ))\n",
+    "    der =  list(map(lambda term: term[0]*x_value**term[1]*term[2]**y_value,list_of_terms ))\n",
     "    return tuple(der)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 0, 0)"
+       "(4, 0, 1)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
