--- a/index.ipynb
+++ b/index.ipynb
@@ -2448,7 +2448,7 @@
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    der =  list(map(lambda term: term[0]*x_value**term[1]*term[2]**y_value,list_of_terms ))\n",
-    "    return tuple(der)\n",
+    "    return sumder\n",
     "    pass"
    ]
   },
