--- a/index.ipynb
+++ b/index.ipynb
@@ -2638,7 +2638,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda x:term_df_d))\n",
+    "    return list(map(lambda x:term_df_dx(x), list_of_te))\n",
     "    pass"
    ]
   },
