Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2639,7 +2639,8 @@
    "source": [
     "def df_dx(list_of_terms):\n",
     "    terms =  list(map(lambda x:term_df_dx(x), list_of_terms))\n",
-    "    filt = list(filter(lambda x:x[0] != 0 ))\n",
+    "    filt = list(filter(lambda x:x[0] != 0, terms ))\n",
+    "    return filt\n",
     "    pass"
    ]
   },
