--- a/index.ipynb
+++ b/index.ipynb
@@ -2678,7 +2678,9 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    \n",
+    "    constant = term[0]*term[2]\n",
+    "    exponent = term[2] - 1\n",
+    "    return (constant, term[1], exponent)\n",
     "    pass"
    ]
   },
