--- a/index.ipynb
+++ b/index.ipynb
@@ -2820,6 +2820,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
+    "    list(map(lambda))\n",
     "    pass"
    ]
   },
