--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2820,7 +2820,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    list(map(lambda x: term))\n",
+    "    list(map(lambda x: ))\n",
     "    pass"
    ]
   },
