Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2820,7 +2820,8 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    return list(map(lambda x: term_df_dy(x), list_of_terms))\n",
+    "    terms =  list(map(lambda x: term_df_dy(x), list_of_terms))\n",
+    "    return li\n",
     "    pass"
    ]
   },
