Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2821,7 +2821,7 @@
    "source": [
     "def df_dy(list_of_terms):\n",
     "    terms =  list(map(lambda x: term_df_dy(x), list_of_terms))\n",
-    "    return li\n",
+    "    return list(filter(lambda x: ))\n",
     "    pass"
    ]
   },
